# src/routes/likeRoutes.js
@@ -2,7 +2,6 @@
 
 // Import express
 import express from "express";
-import jwtAuth from "../middlewares/jwt.middleware.js";
 import LikeController from "../controller/likeController.js";
 
 // Intialize like router
@@ -13,10 +12,10 @@ const likeController = new LikeController();
 
 // All paths to likeController method
 // Toggle like (add/remove)
-likeRouter.get("/toggle/:postId", jwtAuth, likeController.toggleLike);
+likeRouter.get("/toggle/:postId", likeController.toggleLike);
 
 // Get all likes for a specific post
-likeRouter.get("/:postId", jwtAuth, likeController.getLikes);
+likeRouter.get("/:postId", likeController.getLikes);
 
 // Export likeRouter
 export default likeRouter;
