# src/routes/postRoutes.js
@@ -4,7 +4,6 @@
 import express from "express";
 import PostController from "../controller/postController.js";
 import { upload } from "../middlewares/fileupload.middleware.js";
-import jwtAuth from "../middlewares/jwt.middleware.js";
 
 // Initialize an Express Router
 const postRouter = express.Router();
@@ -13,22 +12,17 @@ const postRouter = express.Router();
 const postController = new PostController();
 
 // All paths to controller method
-postRouter.get("/", jwtAuth, postController.getAllPosts);
-postRouter.get("/:id", jwtAuth, postController.getPostById);
-postRouter.get("/user/:userId", jwtAuth, postController.getPostsByUserId);
-postRouter.post(
-  "/create-post",
-  upload.single("imageUrl"),
-  jwtAuth,
-  postController.createPost
-);
-postRouter.put(
-  "/:id",
-  upload.single("imageUrl"),
-  jwtAuth,
-  postController.updatePost
-);
-postRouter.delete("/:id", jwtAuth, postController.deletePost);
+postRouter.get("/", postController.getAllPosts);
+postRouter.get("/:id", postController.getPostById);
+postRouter.get("/user/:userId", postController.getPostsByUserId);
+postRouter.post("/", upload.single("image"), postController.createPost);
+postRouter.put("/:id", upload.single("image"), postController.updatePost);
+postRouter.delete("/:id", postController.deletePost);
+// Route to update post status (draft, archive, publish)
+postRouter.put("/status/:id", postController.updateStatus);
+
+// Route to toggle a bookmark on a post
+postRouter.get("/bookmark/:id", postController.toggleBookmark);
 
 // Export postRouter
 export default postRouter;
