# src/routes/userRoutes.js
@@ -1,19 +1,24 @@
-// Manage routes/paths to ProductController
-import UserController from "../controller/userController.js";
+// Manage routes/paths to UserController and related controllers
 
 // Import express
 import express from "express";
+import UserController from "../controller/userController.js";
+import jwtAuth from "../middlewares/jwt.middleware.js";
+import {
+  SignupValidation,
+  LoginValidation,
+} from "../middlewares/validation.middlewware.js";
 
-// Initialize an  Express Router
+// Initialize an Express Router
 const userRouter = express.Router();
 
-// Create an instance of UserController
+// Create instances of controllers
 const userController = new UserController();
 
-// All paths to controller method
-userRouter.post("/sign-up", userController.signUp);
-userRouter.post("/sign-in", userController.signIn);
-userRouter.get("/", userController.getAllUsers);
+// All paths to controller methods
+userRouter.post("/sign-up", SignupValidation, userController.signUp);
+userRouter.post("/sign-in", LoginValidation, userController.signIn);
+userRouter.get("/", jwtAuth, userController.getAllUsers);
 
 // Export userRouter
 export default userRouter;
